# street-onion-pristine

./: .env.example  .gitignore  CLAUDE.md  README.md  agent_example.ipynb  convert_all_csv.py  csv_to_parquet_converter.py  main.py  pyproject.toml  requirements.txt  smol_claude.py  test.py
src/: main.py
